[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiniGame01/Hud/Hud.gd" type="Script" id=1]
[ext_resource path="res://MiniGame01/Hud/Textures/Button/pause_button_1.png" type="Texture" id=2]
[ext_resource path="res://MiniGame01/Hud/Textures/Button/pause_button_2.png" type="Texture" id=3]
[ext_resource path="res://Fonts/LoveYaLikeASister.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://MiniGame01/Hud/Textures/Menu/pause_rahmen_holz.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]

size = 250
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Hud" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Button_Pause" type="TextureButton" parent="." index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -950.0
margin_top = 430.0
margin_right = 867.0
margin_bottom = 1215.0
rect_scale = Vector2( 0.2, 0.2 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label1" type="Label" parent="Button_Pause" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1817.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Pause"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Pausemenu" type="Sprite" parent="." index="1"]

editor/display_folded = true
visible = false
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Button_Continue" type="TextureButton" parent="Pausemenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -227.0
margin_top = -280.0
margin_right = 1590.0
margin_bottom = 505.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label1" type="Label" parent="Pausemenu/Button_Continue" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1817.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Continue"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Button_MainMenu" type="TextureButton" parent="Pausemenu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -227.0
margin_top = -90.0
margin_right = 1590.0
margin_bottom = 695.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label1" type="Label" parent="Pausemenu/Button_MainMenu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1817.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Main Menu"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Button_Quit" type="TextureButton" parent="Pausemenu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -227.0
margin_top = 100.0
margin_right = 1590.0
margin_bottom = 885.0
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label1" type="Label" parent="Pausemenu/Button_Quit" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1817.0
margin_bottom = 736.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Quit Game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[connection signal="pressed" from="Button_Pause" to="." method="_on_Button_Pause_pressed"]

[connection signal="pressed" from="Pausemenu/Button_Continue" to="." method="_on_Button_Continue_pressed"]

[connection signal="pressed" from="Pausemenu/Button_MainMenu" to="." method="_on_Button_MainMenu_pressed"]

[connection signal="pressed" from="Pausemenu/Button_Quit" to="." method="_on_Button_Quit_pressed"]


